--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">PHOTOSWAP: Personalized Subject Swapping in Images</h1>
+          <h1 class="title is-1 publication-title">PHOTOSWAP-2: Personalized Subject Swapping via Appearance Adaptation</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://g-jing.github.io">Jing Gu</a><sup>1</sup>,</span>
@@ -76,10 +76,10 @@
             <span class="author-block"><sup>2</sup>Adobe,</span>
           </div>
           
-          <br>
+          <!-- <br>
           <div class="is-size-5 publication-authors">
             <span class="author-block"><b style="color:#e08ba0; font-weight:normal"> <b>Under Review</b> </b></span>
-          </div>
+          </div> -->
 
           <div class="column has-text-centered">
             <div class="publication-links">
